Closed Bug 327943 Opened 20 years ago Closed 20 years ago

nsGrippyFrame probably isn't needed

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: enndeakin, Assigned: enndeakin)

Details

Attachments

(1 file)

The only use it has is to change the collapsed attribute state when clicked, but this could be done in XBL instead. For toolkit, <grippy> is only used on Mac and even then the collapsing should happen on the splitter to be consistent with other Mac apps.
Neil, can you review the xbl parts, if you think this is a good idea
Attachment #212493 - Flags: review?
Attachment #212493 - Flags: review? → review?(neil)
Comment on attachment 212493 [details] [diff] [review] Remove grippy frame >+ <handler event="click"> This includes right and middle clicks. You probably want to use command instead. Also I believe our style is to use <![CDATA[ blocks for large handlers. r=me with these fixed. >+ splitter.setAttribute("state", "open"); Intriguingly the splitter frame actually uses an empty string when you drag the splitter open, but I guess that's a separate bug. (Removing the attribute is obviously incorrect).
Attachment #212493 - Flags: review?(neil) → review+
Comment on attachment 212493 [details] [diff] [review] Remove grippy frame roc, could you review the layout parts also?
Attachment #212493 - Flags: superreview?(roc)
Attachment #212493 - Flags: superreview?(roc) → superreview+
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Neil, this patch should be OK on the 1.8 branch, right? It would make mirroring checkins to toolkit/content/widgets easier. As is, splitter.xml would need to be ifdeffed if branch and trunk are synced.
(In reply to comment #4) > Neil, this patch should be OK on the 1.8 branch, right? It would make mirroring > checkins to toolkit/content/widgets easier. As is, splitter.xml would need to > be ifdeffed if branch and trunk are synced. > It should be OK.
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: