Bug 327943, remove grippy frame, r=neil,sr=roc